--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bestell App</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" sizes="180x180" href="./Favicon/favicon-32x32.png">
 
     <script src="script.js" defer></script>
@@ -17,7 +16,15 @@
         <div w3-include-html="./templates/header.html"></div>
     </header>
 
+    <div class="head-food">
+        <img src="/img/bigburger.jpg" alt="Burger">
+        <img src="/img/pizza.jpg" alt="Pizza">
+        <img src="/img/doner.png" alt="Döner">
+    </div>
 
+    <div class="headline-img">
+        <img src="/img/breakfast.jpg" alt="">
+    </div>
 
 
     <footer>
@@ -25,4 +32,4 @@
     </footer>
     
 </body>
-</html>
+</html
